# cv_ml_probes

./: .gitignore  README.md  dependencies.sh
ar/: CMakeLists.txt  README.md  augreal.cpp
common/: common.cpp  common.hpp
cyclegan/: .gitignore  README.md  cyclegan.ipynb  inference.py  inference.sh  train.py  train.sh
cyclegan/tensorflow_research/: cyclegan.py  data_provider.py  networks.py
face/: .gitignore  CMakeLists.txt  README.md  landmarks.cpp  train.sh
rl/: README.md  a3c.py
segnet/: .gitignore  CMakeLists.txt  README.md  data_provider.py  predict.cpp  predict.sh  train.py  train.sh
segnet/aizawan/: camvid.py  ops.py  segnet.py
